--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,18 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+
+VERSION_NAME=0.0.1
+VERSION_CODE=1
+GROUP=com.github.hekahouse
+
+POM_DESCRIPTION=A library provides Eddystone UID broadcasting and scanning with configurable namespace and instance
+POM_URL=https://github.com/HekaHouse/EddyTooth
+POM_SCM_URL=https://github.com/HekaHouse/EddyTooth
+POM_SCM_CONNECTION=scm:git@github.com:HekaHouse/EddyTooth.git
+POM_SCM_DEV_CONNECTION=scm:git@github.com:HekaHouse/EddyTooth.git
+POM_LICENCE_NAME=MIT
+POM_LICENCE_URL=https://opensource.org/licenses/MIT
+POM_LICENCE_DIST=repo
+POM_DEVELOPER_ID=aron23
+POM_DEVELOPER_NAME=Aron Price
