--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "house.heka.eddytooth"
+        applicationId "house.heka.eddytooth.example"
         minSdkVersion 22
         targetSdkVersion 23
         versionCode 1
@@ -23,5 +23,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
+    dependencies {
+        compile project(':library')
+    }
 }
