Updated example to incorporate logic for "contiguous" a system for identifying a local network of bluetooth devices

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,6 +21,8 @@ VERSION_NAME=0.0.1
 VERSION_CODE=1
 GROUP=com.github.hekahouse
 
+org.gradle.jvmargs=-Xmx2048M
+
 POM_DESCRIPTION=A library provides Eddystone UID broadcasting and scanning with configurable namespace and instance
 POM_URL=https://github.com/HekaHouse/EddyTooth
 POM_SCM_URL=https://github.com/HekaHouse/EddyTooth
