--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,12 +1,12 @@
 apply plugin: 'com.android.application'
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "24.0.0"
 
     defaultConfig {
-        applicationId "house.heka.eddytooth.example"
+        applicationId "house.heka.eddytooth.highly"
         minSdkVersion 22
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
     }
@@ -20,7 +20,11 @@ android {
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.4.0'
+    compile 'com.android.support:appcompat-v7:24.0.0'
+    compile 'com.google.android.gms:play-services-iid:9.2.1'
+    compile 'com.android.support:recyclerview-v7:24.0.0'
+    compile 'com.google.firebase:firebase-database:9.2.1'
+    compile 'com.google.firebase:firebase-auth:9.2.1'
     dependencies {
         compile project(':library')
     }
@@ -29,3 +33,5 @@ dependencies {
 repositories {
     maven { url 'https://github.com/HekaHouse/EddyTooth' }
 }
+
+apply plugin: 'com.google.gms.google-services'
