--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.2'
+        classpath 'com.android.tools.build:gradle:2.3.0-alpha1'
         classpath 'com.github.dcendents:android-maven-gradle-plugin:1.3' // Add this line
         classpath  'com.google.gms:google-services:3.0.0'
     }
@@ -15,13 +15,8 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
-        flatDir {
-            dirs 'libs'
-        }
     }
 }
-
-
 
 task clean(type: Delete) {
     delete rootProject.buildDir
