--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,10 +1,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="house.heka.eddytooth.highly">
-
-    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <application
+        android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name" android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:allowBackup="false">
 
-        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
 
         <activity android:name="house.heka.eddytooth.highly.Contiguous"
             android:label="@string/app_name"
